force-app/main/default/objects/Activity/fields/ContactAttempt__c.field-meta.xml
<CustomField>
    <fullName>ContactAttempt__c</fullName>
    <label>Tentativa de contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Com sucesso - E-mail</fullName>
            </value>
            <value>
                <fullName>Com sucesso - SMS</fullName>
            </value>
            <value>
                <fullName>Com sucesso - Voz</fullName>
            </value>
            <value>
                <fullName>Com sucesso - WhatsApp</fullName>
            </value>
            <value>
                <fullName>Sem sucesso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>