force-app/main/default/objects/Activity/fields/DueDateTime__c.field-meta.xml
<CustomField>
    <fullName>DueDateTime__c</fullName>
    <label>Data/Hora de vencimento</label>
    <type>DateTime</type>
</CustomField>