force-app/main/default/objects/Activity/fields/IsHDE__c.field-meta.xml
<CustomField>
    <fullName>IsHDE__c</fullName>
    <formula>RecordType.DeveloperName = &apos;HDETask&apos;</formula>
    <label>É do HDE</label>
    <type>Checkbox</type>
</CustomField>