force-app/main/default/objects/Activity/fields/PreferredChannel__c.field-meta.xml
<CustomField>
    <fullName>PreferredChannel__c</fullName>
    <description>Canal de contato preferencial</description>
    <label>Canal Preferencial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
                <label>Ligação</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>