force-app/main/default/objects/Activity/fields/PreferredTimeCourse__c.field-meta.xml
<CustomField>
    <fullName>PreferredTimeCourse__c</fullName>
    <description>Periodo de contato preferencial</description>
    <label>Período Preferencial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
                <label>Manhã</label>
            </value>
            <value>
                <fullName>Night</fullName>
                <label>Noite</label>
            </value>
            <value>
                <fullName>Afternoon</fullName>
                <label>Tarde</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>