force-app/main/default/objects/Activity/fields/TaskListType__c.field-meta.xml
<CustomField>
    <fullName>TaskListType__c</fullName>
    <label>Lista de Tarefas</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>View__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abertura do caso</fullName>
            </value>
            <value>
                <fullName>Agenda técnica não cumprida</fullName>
            </value>
            <value>
                <fullName>Aguardando execução outras áreas</fullName>
            </value>
            <value>
                <fullName>Botão HDE Priorizar Chamado(criticos)</fullName>
            </value>
            <value>
                <fullName>Caso fechado com contato</fullName>
            </value>
            <value>
                <fullName>Caso fechado sem contato</fullName>
            </value>
            <value>
                <fullName>Chamado vencido sem adição de nenhuma tarefa</fullName>
            </value>
            <value>
                <fullName>Cobrar Gerente</fullName>
            </value>
            <value>
                <fullName>Cobrar Performance</fullName>
            </value>
            <value>
                <fullName>Cobrar Regional</fullName>
            </value>
            <value>
                <fullName>Cobrar Supervisor</fullName>
            </value>
            <value>
                <fullName>Com sucesso - Email</fullName>
            </value>
            <value>
                <fullName>Com sucesso - Voz</fullName>
            </value>
            <value>
                <fullName>Confirmação de solução da solicitação</fullName>
            </value>
            <value>
                <fullName>Confirmar atendimento Agenda</fullName>
            </value>
            <value>
                <fullName>Confirmar execução de reembolso</fullName>
            </value>
            <value>
                <fullName>Confirmar Op. Sucesso contato</fullName>
            </value>
            <value>
                <fullName>Contato cliente complementar solicitação</fullName>
            </value>
            <value>
                <fullName>Contato Sem Sucesso</fullName>
            </value>
            <value>
                <fullName>Executar processo</fullName>
            </value>
            <value>
                <fullName>Gestão de Expectativas</fullName>
            </value>
            <value>
                <fullName>Lembrar Op. Promessa contato</fullName>
            </value>
            <value>
                <fullName>Lembrar outro Op. Promessa contato</fullName>
            </value>
            <value>
                <fullName>Reagendamento</fullName>
            </value>
            <value>
                <fullName>Realizar ajuste próximo ciclo faturamento</fullName>
            </value>
            <value>
                <fullName>Realizar contato cliente 1</fullName>
            </value>
            <value>
                <fullName>Realizar contato cliente 2</fullName>
            </value>
            <value>
                <fullName>Realizar contato cliente 3</fullName>
            </value>
            <value>
                <fullName>Realizar contato cliente 4</fullName>
            </value>
            <value>
                <fullName>Realizar contato cliente 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>