force-app/main/default/objects/Activity/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>Visão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRI E-mail Platinum</fullName>
            </value>
            <value>
                <fullName>CRI E-mail V</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento Gold</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento Loja</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento Ouvidoria</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento Platinum</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento Prime</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento V</fullName>
            </value>
            <value>
                <fullName>CRI Supervisor V</fullName>
            </value>
            <value>
                <fullName>Guardiões V</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento Púrpura</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento Silver</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento Lojas (Revendas)</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento Ouvidoria Comunidades</fullName>
            </value>
            <value>
                <fullName>CRI Escalonamento VPR Lojas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>